# ncn

./: CMakeLists.txt  README.md  env.sh
env/albedo/: shell
env/levante.dkrz.de/: env.sh
env/mistral.dkrz.de/modules/: ncn
levante.dkrz.de/modules/: ncn
lib/: CMakeLists.txt  almost_equal.cpp  almost_equal.h  compare_netcdf.cpp  compare_netcdf.h  fesom_mean_timestamp_adjust.cpp  insert_time_bounds.cpp  insert_time_bounds.h  mean_timestamp_adjust.cpp  mean_timestamp_adjust.h  netcdf_traits.h  netcdf_utils.cpp  netcdf_utils.h  tail_zeros.cpp  tail_zeros.h  time_increases.cpp  time_increases.h  transpose.cpp  transpose.h
test/: CMakeLists.txt  globals.h  main.cpp  test_almost_equal.cpp  test_assert_time_increases.cpp  test_insert_time_bounds.cpp  test_ncn_compare.cpp  test_netcdf_utils.cpp  test_tail_zeros.cpp  test_transpose.cpp
test/fixtures/ncn/: monthly_mean_time_days.nc  tail_zeros.nc  tos.nc  transpose.nc
